# CryptoStreamX

./: .gitignore  README.md  config_example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_utils.py
.github/workflows/: databricks-cicd.yml
notebooks/bronze/: ingest_coingecko.py  ingest_coingecko_db.py  ingest_coingecko_simple.py  ingest_coingecko_uc.py
notebooks/gold/: aggregate_metrics.py
notebooks/monitoring/: pipeline_monitor.py
notebooks/silver/: transform_coingecko.py
notebooks/utils/: create_mock_table.py  list_bronze_data.py  list_bronze_tables.py  list_dbfs.py
src/utils/: api_client.py  config.py  db_utils.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_additional.py  test_config.py  test_databricks_pipeline.py  test_db_utils.py  test_db_utils_additional.py  test_pipeline.py
tests/mocks/: db_utils_mock.py
workflows/: pipeline_job.json
